# BE/app/routes.py
@@ -77,3 +77,35 @@ def get_parking(id):
         "message": "주차장 정보를 불러왔습니다.",
         "data": parking
     }),200
+
+#주차장 예약 생성
+@main.route('/api/reservations', methods=['POST'])
+def reserve_parking():
+    data = request.get_json()
+    user_id = data.get("user_id")
+    parking_id = data.get("parking_id")
+    start_time = data.get("start_time")
+    end_time = data.get("end_time")
+
+
+    # 주차장이 존재하는지
+    parking = PARKINGS.get(parking_id)
+    if not parking:
+        return jsonify({
+            "status": "fail",
+            "message": "존재하지 않는 주차장입니다.",
+            "error_code": "NOT_FOUND"
+        }), 404
+
+    # 예약 추가 (실제 DB 대신 리스트) -> DB 구현되면 바꾸면 됩니다.
+    RESERVATIONS.append({
+        "user_id": user_id,
+        "parking_id": parking_id,
+        "start_time": start_time,
+        "end_time": end_time
+    })
+
+    return jsonify({
+        "status": "success",
+        "message": "주차장 예약이 완료되었습니다."
+    }), 200
